--- a/css/_partials/responsive-desktop.css
+++ b/css/_partials/responsive-desktop.css
@@ -2,7 +2,7 @@
 @media screen and (min-width: 992px) {
 
     /* DEBUG */
-    .debug main::after {
+    .debug header::after {
         content: 'DESKTOP';
     }
 
@@ -12,7 +12,7 @@
 @media screen and (min-width: 1200px) {
 
     /* DEBUG */
-    .debug main::after {
+    .debug header::after {
         content: 'DESKTOP XL';
     }
 
