--- a/css/_partials/responsive-tablet.css
+++ b/css/_partials/responsive-tablet.css
@@ -2,7 +2,7 @@
 @media screen and (min-width: 768px) {
 
     /* DEBUG */
-    .debug main::after {
+    .debug header::after {
         content: 'TABLET';
     }
 }
