--- a/css/_partials/responsive-tablet.css
+++ b/css/_partials/responsive-tablet.css
@@ -5,4 +5,9 @@
     .debug header::after {
         content: 'TABLET';
     }
+
+    /* HEADER */
+    header h3 {
+        font-size: 1.5rem;
+    }
 }
