[BONUS] Created separator component

--- a/css/_partials/responsive-tablet.css
+++ b/css/_partials/responsive-tablet.css
@@ -2,7 +2,9 @@
 @media screen and (min-width: 768px) {
 
     /* COMMON */
-
+    :root {
+        --mc-separator-width: 50%;
+    }
 
     /* JUMBOTRON */
     h1 {
