--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('./_partials/variable.css');
 @import url('./_partials/common.css');
+@import url('./_partials/components/separator.css');
 @import url('./_partials/responsive-tablet.css');
 @import url('./_partials/responsive-desktop.css');
